--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jquery": "^3.2.1",
     "node-sass": "^4.5.3",
     "popper.js": "^1.12.5",
+    "resolve-url-loader": "^2.1.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
